[gd_scene load_steps=4 format=3 uid="uid://bgsbbv547qjkm"]

[ext_resource type="Theme" uid="uid://c0j6fiiejc40k" path="res://Assets/Themes/MenuTheme.tres" id="1_8fo1c"]
[ext_resource type="Script" uid="uid://b6s03uyoyyjb0" path="res://Scripts/game_over.gd" id="2_8fo1c"]
[ext_resource type="PackedScene" uid="uid://bq425x5qtxnpe" path="res://Scenes/upgrades.tscn" id="3_ek8ke"]

[node name="Game Over" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8fo1c")
script = ExtResource("2_8fo1c")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Final Score" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "Final Score: 0000000"
fit_content = true
horizontal_alignment = 1

[node name="High Score" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "High Score: 0000000"
fit_content = true
horizontal_alignment = 1

[node name="Coins Collected" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "Coins Collected: 0000000"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Play Again" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Play Again"

[node name="Upgrades" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Upgrades
"

[node name="Main Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="Upgrades" parent="." instance=ExtResource("3_ek8ke")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
